RESOLVED FIXED 270058
View transition layers are positioned wrong if a clipping layer is present.
https://bugs.webkit.org/show_bug.cgi?id=270058
Summary View transition layers are positioned wrong if a clipping layer is present.
Matt Woodrow
Reported 2024-02-25 15:57:27 PST
Positioning for a view-transition 'new' layer currently sets the origin of the primary graphics rect to 0,0, but this doesn't move any clipping layers positioned in updateClippingStackLayerGeometry. We can instead adjust the position of the 'parent graphics layer rect' (since all local layer positions are computed relative to that) to a value that results in 0,0 being computed for the primary rect.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-25 15:57:57 PST
Matt Woodrow
Comment 2 2024-02-25 15:59:41 PST
EWS
Comment 3 2024-02-25 22:18:23 PST
Committed 275307@main (c76f59cd157b): <https://commits.webkit.org/275307@main> Reviewed commits have been landed. Closing PR #25079 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.